--- a/ValidadordeCNPJ.html
+++ b/ValidadordeCNPJ.html
@@ -164,7 +164,7 @@ Criado por Leon Denis Paiva Silva 31-03-2017
 	</head>
 	<body>
 		<form style="vertical-align: middle;">
-			<b>Validador de CNPJ - Leon Denis</b>
+			<b class="CAIXA_TD">Validador de CNPJ - Leon Denis</b>
 		<table style="width: 420x;" class="TABELA">
 			<tr>
 				<td class="CAIXA_TD" style="width: 110px;">CNPJ:</td><td style="width: 140px;">
